--- a/docs/data_catalog/overview.mdx
+++ b/docs/data_catalog/overview.mdx
@@ -131,7 +131,7 @@ and decision-making capabilities within the organization.
 
 In the diagram below is shown how the services involved in the aforementioned Marketplace components are linked together. 
 
-In particular, the Data Catalog FE interacts with the application's microservice through the [Fabric BFF](/data_catalog/data_catalog_fabric_bff.mdx). 
+In particular, the Data Catalog FE interacts with the application's microservices through the [Fabric BFF](/data_catalog/data_catalog_fabric_bff.mdx). 
 This component manages also the _Connections_ that can be configured from the frontend to retrieve data from external sources.
 
 To retrieve data from external sources, the [Job Runner](/data_catalog/data_catalog_job_runner.mdx) can schedule a job to launch an _Agent Dataset Scan_ task that will store them as _Datasets_.
