--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -5,13 +5,11 @@ sidebar_label: v13.4.0
 image: "img/release-note-link-preview.png"
 ---
 
-_November 21th, 2024_
+_December 05th, 2024_
 
 ## Manage your resources from Mia-Platform Software Catalog
 
-
 In this release, we’ve enhanced the Software Catalog section with new features to improve resource management. Users can now create new items, as well as create new versions for items that support versioning, directly from the Console UI. Additionally, we’ve introduced the possibility to delete both individual items and their versions, offering more flexibility in managing resources within the Catalog. 
-
 
 For more details, please refer to [the documentation](/software-catalog/manage-items/software-catalog-ui/overview.md).
 
@@ -184,4 +182,4 @@ The new version `3.1.0` comes with a security fix which redacts sensitive header
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.8.0-beta.3`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.8.0`.
