Update v13.5.0.md with data lineage description

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -15,6 +15,14 @@ Console SaaS users can try out v13.5.0 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
+## Data Lineage
+
+Mia-Platform Data Catalog introduces the [Data Lineage](/data_catalog/frontend/data_lineage.mdx), a powerful tool for understanding, visualizing, and describing the flow and transformations of data within an organization.  
+This feature allows users to explore data relationships at two levels: Table Lineage and System of Record (SoR) Lineage, offering both detailed insights and a high-level overview.
+At the [Table-Level Lineage](/data_catalog/frontend/data_lineage.mdx#table-level-lineage), users can dive into the interconnections between individual tables, visualizing data flows and the transformations applied along the way. This detailed view serves also as a workspace where users can enrich the lineage with virtual assets and jobs, particularly valuable during planning or analysis phases, enabling users to simulate future scenarios or complete relationships that have not yet been automatically retrieved, ensuring that the context and purpose of data flows are thoroughly captured and properly described.
+The [SoR-Level Lineage](/data_catalog/frontend/data_lineage.mdx#sor-level-lineage) shows an aggregated view of data flows between Systems of Record, simplifying the identification of dependencies and bottlenecks at a broader scale, and clarifying how various systems interact within the organization.
+If you are using [Fast Data Control Plane](/fast_data/runtime_management/overview.mdx), the aggregation processes configured in your Fast Data Projects can be automatically captured in the Data Lineage, making Fast Data jobs visible on the Lineage canvas.
+With the Data Lineage solution, users can not only monitor their data ecosystem but also proactively model and enrich it, gaining complete control and understanding of their data flows. This solution bridges the gap between operational detail and strategic vision, supporting advanced analysis and well-informed decision-making.
 
 ## Console
 
