add composer and api portal rn

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -44,19 +44,25 @@ For more information check out the service [changelog](/runtime_suite/projection
 
 ## Microfrontend Composer
 
-### Configurator
+### Back-Kit Library
 
-#### Improvements
+The new version `v1.5.11` of the back-kit library is available!
 
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
 
 #### Bug Fix
 
-* 
+* Fixed bk-table height when inside bk-layout-swap
 
 ## Marketplace
 
 ### Marketplace Updates
 
+#### API Portal
+
+##### Bug Fix
+
+API Portal version `2.1.1` is now [served directly](/runtime_suite/swagger-aggregator/30_apis.md#static-route) from Swagger Aggregator version `3.8.2`, with the `oauthFlows.password.tokenUrl` format changed from `uri` to `uri-reference` in the OpenApi 3.1 schema
 
 
 ## How to update your Console
