fix swagger aggregator rn

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -66,12 +66,11 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 ### Marketplace Updates
 
-#### API Portal
+#### Swagger Aggregator
 
 ##### Bug Fix
 
-API Portal version `2.1.1` is now [served directly](/runtime_suite/swagger-aggregator/30_apis.md#static-route) from Swagger Aggregator version `3.8.2`, with the `oauthFlows.password.tokenUrl` format changed from `uri` to `uri-reference` in the OpenApi 3.1 schema
-
+ From Swagger Aggregator version `3.8.2`, the `oauthFlows.password.tokenUrl` format is changed from `uri` to `uri-reference` in the OpenApi 3.1 schema
 
 ## How to update your Console
 
