Update v13.5.0.md with connections management description in data catalog application

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -24,6 +24,16 @@ The [SoR-Level Lineage](/data_catalog/frontend/data_lineage.mdx#sor-level-lineag
 If you are using [Fast Data Control Plane](/fast_data/runtime_management/overview.mdx), the aggregation processes configured in your Fast Data Projects can be automatically captured in the Data Lineage, making Fast Data jobs visible on the Lineage canvas.
 With the Data Lineage solution, users can not only monitor their data ecosystem but also proactively model and enrich it, gaining complete control and understanding of their data flows. This solution bridges the gap between operational detail and strategic vision, supporting advanced analysis and well-informed decision-making.
 
+## Connections Management in Data Catalog Application
+
+The [Connections Management](/data_catalog/frontend/data_catalog_connections.mdx) feature in Mia-Platform Data Catalog establishes the foundation for comprehensive metadata management and lineage tracking. By serving as the source of truth, Connections enable users to retrieve and leverage metadata from [various supported providers](/data_catalog/frontend/data_catalog_connections.mdx#connection-providers), supporting critical operations such as [Asset Discovery](/data_catalog/frontend/data_catalog_assets.mdx) and [Lineage Analysis](/data_catalog/frontend/data_lineage.mdx).  
+Through the Connections Panel, users can manage the lifecycle of connections, from creation to deletion.  
+Administrators can access a detailed overview of all configured connections, which includes essential information like resource type, connection type, and specific settings.  
+The intuitive interface also offers a wizard to guide users in defining new connections, ensuring seamless integration with external systems.  
+Once a connection is established, assets can be imported directly into the Data Catalog using the Data Catalog Sync feature.  
+If you are using [Fast Data Control Plane](/fast_data/runtime_management/overview.mdx), in order to acquire information from the Fast Data pipelines, it is possible to trigger the [Fast Data Jobs Sync](/data_catalog/data_catalog_job_runner.mdx#fast-data-jobs-sync) directly from a pre-configured gRPC interface within the administrative panel. This feature generates Open Lineage Jobs automatically, ensuring accurate representation of pipeline activities in the Data Lineage.  
+Supporting processes like Agent Dataset Scan, Data Catalog Sync, and Connection Cleanup maintain the efficiency and accuracy of metadata operations.
+
 ## Console
 
 ### Improvements
