--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -40,6 +40,13 @@ If you are using [Fast Data Control Plane](/fast_data/runtime_management/overvie
 
 Supporting processes like Agent Dataset Scan, Data Catalog Sync, and Connection Cleanup maintain the efficiency and accuracy of metadata operations.
 
+## Centralised management of the Container Registries 
+
+Gain more control over your container registries! You can now easily manage and monitor them directly within your Project settings, where you can view, create, and delete them according to your purposes. 
+This update enables centralized monitoring and control of your registries, and allows you to specify the desired registry at the service level.
+
+[to do - link alla doc]
+
 ## Console
 
 ### Improvements
