Add Mia Care marketplace updates

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -89,11 +89,44 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 ### Marketplace Updates
 
+#### Care Kit
+
+A new version `2.9.2` of Care Kit is out!
+
+The new version bring some fixes to the following components:
+
+- `ck-patient-dashboard`: Italian localization is now available
+- `ck-threshold-modal`: fixed a concurrency bug causing the component to show outdated thresholds  
+
+#### Chat Service Backend
+
+A new version `1.0.2` of Chat Service Backend is available!
+
+This version upgrades Node.js to v20 and fixes some documentation links.
+
+#### Notification Manager
+
+A new version `2.4.2` of Notification Manager is available!
+
+This version fixes a bug causing reminders not aborted correctly when an appointment was updated or deleted. 
+
 #### Swagger Aggregator
 
 ##### Bug Fix
 
  From Swagger Aggregator version `3.8.2`, the `oauthFlows.password.tokenUrl` format is changed from `uri` to `uri-reference` in the OpenApi 3.1 schema
+
+#### Teleconsultation Service Frontend
+
+A new version `2.0.2` of the Teleconsultation Service Frontend is available!
+
+This version fixes a bug causing the UI language not matching sometimes the browser language.
+
+#### User Manager Service
+
+A new version `1.5.2` of the User Manager Service is available!
+
+This version upgrades Node.js to v20 and several dependencies, including `custom-plugin-lib` to v6.
 
 ## How to update your Console
 
