add software catalog updates

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -47,6 +47,12 @@ This update enables centralized monitoring and control of your registries, and a
 
 [to do - link alla doc]
 
+## Enhanced Item Management: Edit Items in Mia-Platform Software Catalog
+
+In this release, we’ve introduced the ability to edit items in the Software Catalog, providing more flexibility in resource management. Non-versioned items can now be fully edited, allowing users to modify all aspects of the item. For versioned items, only the metadata can be edited, while any changes to the resources will still require creating a new version.
+
+For more details, please refer to [the documentation](/software-catalog/manage-items/software-catalog-ui/update/overview.md)
+
 ## Console
 
 ### Improvements
