fix composability rn

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -120,7 +120,7 @@ This version fixes a bug causing reminders not aborted correctly when an appoint
 
 ##### Bug Fix
 
- From Swagger Aggregator version `3.8.2`, the `oauthFlows.password.tokenUrl` format is changed from `uri` to `uri-reference` in the OpenApi 3.1 schema
+From Swagger Aggregator version `3.8.2`, the `oauthFlows.password.tokenUrl` format has changed from `uri` to `uri-reference` in the OpenApi 3.1 schema
 
 #### Teleconsultation Service Frontend
 
