--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -57,7 +57,9 @@ For more details, please refer to [the documentation](/software-catalog/manage-i
 
 ### Improvements
 
+#### Infrastructure Resource
 
+The 'resourceId' of marketplace resources can now be modified after detachment, providing increased flexibility for resource organization.
 
 ### Bug Fix
 
