--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -59,7 +59,7 @@ For more details, please refer to [the documentation](/software-catalog/manage-i
 
 #### Infrastructure Resource
 
-The 'resourceId' of marketplace resources can now be modified after detachment, providing increased flexibility for resource organization.
+The 'resourceId' of marketplace resources can now be modified after detachment, providing increased flexibility for resource organization at Runtime level.
 
 ### Bug Fix
 
