--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -53,6 +53,12 @@ In this release, we’ve introduced the ability to edit items in the Software Ca
 
 For more details, please refer to [the documentation](/software-catalog/manage-items/software-catalog-ui/update/overview.md)
 
+## Introducing Snapshot Comparison through the history modal 
+
+Easily track changes to your configurations! Now you can compare any two snapshots side-by-side with our new visual comparison tool. Just head to the history modal and select the snapshots you want to analyze.
+
+[to do - link alla doc]
+
 ## Console
 
 ### Improvements
