--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -63,6 +63,10 @@ Easily track changes to your configurations! Now you can compare any two snapsho
 
 ### Improvements
 
+#### Allowing Secret key interpolation during the creation of an env variable from secret
+
+It is now possibile to use public variables to interpolate the "Secret key" field when creating new environment variables "From Secret" on a microservice. This enhancement provides greater flexibility and automation when working with secrets, especially for complex deployments where secret keys might vary across environments.
+
 #### Infrastructure Resource
 
 The 'resourceId' of marketplace resources can now be modified after detachment, providing increased flexibility for resource organization at Runtime level.
