--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -75,8 +75,8 @@ The 'resourceId' of marketplace resources can now be modified after detachment, 
 
 This version addressed the following bugs:
 
-* fixed 
-
+* fixed an issue where service/resource management badges were unavailable after a marketplace plugin/custom resource connection failed ;
+* fixed an issue where release notes for the current version of an instantiated resource were not displayed initially in the change version modal.
 
 ## Fast Data
 
