add cancel action to connections fe

--- a/docs/data_catalog/frontend/data_catalog_connections.mdx
+++ b/docs/data_catalog/frontend/data_catalog_connections.mdx
@@ -390,6 +390,15 @@ REPLACE IMAGE
   </div>
 </div>
 
+<!---
+PUT BUTTON ICONS?
+-->
+
+You can also stop the synchronization process by clicking the `Stop button`. This action will cancel both _[Agent Dataset Scan](/data_catalog/data_catalog_job_runner.mdx#agent-dataset-scan)_ and _[Data Catalog Sync](/data_catalog/data_catalog_job_runner.mdx#data-catalog-sync)_ jobs.  
+
+<!---
+PUT IMAGE
+-->
 
 Once the synchronization has been completed, user has evidence about the Job completion. Moreover, it is possible to have evidence of the last sync time.
 
