--- a/docs/data_catalog/secure_access.mdx
+++ b/docs/data_catalog/secure_access.mdx
@@ -677,9 +677,10 @@ so that each operation is covered with the correct grant.
 The permissions described in the table above needs then to be applied to all the different routes exposed over `/api/job-runner/*`,
 so that each operation is covered with the correct grant.
 
-| Route                         | Type      | Method   | User Group Permissions                  |
-|------------------------------ |-----------|----------|-----------------------------------------|
+| Route                         | Type      | Method   | User Group Permissions                   |
+|------------------------------ |-----------|----------|------------------------------------------|
 | `/secret-names`               | REST      | GET      | `permissions["admin:connections"]`       |
+| `/agent/abort`                | REST      | POST     | `permissions["admin:connections"]`       |
 | `/agent/sync`                 | REST      | POST     | `permissions["admin:connections"]`       |
 | `/agent/dsn`                  | REST      | GET      | `permissions["admin:connections"]`       |
 | `/agent/drivers`              | REST      | GET      | `permissions["admin:connections"]`       |
