--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -43,7 +43,7 @@ Supporting processes like Agent Dataset Scan, Data Catalog Sync, and Connection 
 ## Centralised management of the Container Registries 
 
 Gain more control over your container registries in your Projects! You can now easily manage and monitor them directly within your Project settings, where you can view, create, and delete them according to your purposes. 
-This update enables centralized monitoring and control of your registries, and allows you to specify the desired registry at the service level.
+This update enables centralized monitoring and control of your registries, and allows you to specify the desired registry at the service level in the Design area.
 
 For more details, please refer to [the documentation](/docs/console/project-configuration/project-settings.md#container-registries)
 
