--- a/docs/data_catalog/frontend/data_catalog_connections.mdx
+++ b/docs/data_catalog/frontend/data_catalog_connections.mdx
@@ -4,7 +4,6 @@ title: Data Catalog Connections Management
 sidebar_label: Connections Management
 ---
 
-
 ## Introduction to Connections
 
 Connections represent the source of truth of the Data Catalog. By retrieving their metadata, is possible use their assets 
@@ -332,7 +331,7 @@ Please be careful when performing this action.
 
 ## Import Data Assets from a Connection
 
-Once a connection has been properly defined, the connection administrator can start importing its data assets synchronize them into the Data Catalog.
+Once a connection has been properly defined, the connection administrator can start importing its data assets into the Data Catalog.
 
 In the overview of the Connections Panel where all available connections are listed, user can click the `sync button` and schedule an [Agent Dataset Scan Job](/data_catalog/data_catalog_job_runner.mdx#agent-dataset-scan) from the Job Runner.
 Once the action has been executed, the table entry of that connection will be accordingly updated by the Job Runner with information about the triggered job status. 
@@ -355,8 +354,7 @@ Once the _[Agent Dataset Scan Job](/data_catalog/data_catalog_job_runner.mdx#age
   </div>
 </div>
 
-Only one connection at a time will perform the synchronization: If more than one connection is synced at the same time, 
-the ones that are still not executed will be in a `Queue` state.
+Only one connection at a time will perform the synchronization. If more than one connection is synced at the same time, the ones that are still not executed will be in a `Queue` state.
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
   <div style={{display: 'flex', width: '100%'}}>
@@ -366,15 +364,7 @@ the ones that are still not executed will be in a `Queue` state.
   </div>
 </div>
 
-<!---
-PUT BUTTON ICONS?
--->
-
 You can also stop the synchronization process by clicking the `Stop button`. This action will cancel both _[Agent Dataset Scan](/data_catalog/data_catalog_job_runner.mdx#agent-dataset-scan)_ and _[Data Catalog Sync](/data_catalog/data_catalog_job_runner.mdx#data-catalog-sync)_ jobs.  
-
-<!---
-PUT IMAGE
--->
 
 Once the synchronization has been completed, user has evidence about the Job completion. Moreover, it is possible to have evidence of the last sync time.
 
