--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -20,25 +20,17 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 Mia-Platform Data Catalog introduces the [Data Lineage](/data_catalog/frontend/data_lineage.mdx), a powerful tool for understanding, visualizing, and describing the flow and transformations of data within an organization.  
 
 This feature allows users to explore data relationships at two levels: **Table Lineage** and **System of Record (SoR) Lineage**, offering both detailed insights and a high-level overview.  
-At the [Table-Level Lineage](/data_catalog/frontend/data_lineage.mdx#table-level-lineage), users can dive into the interconnections between individual tables, visualizing data flows and the transformations applied along the way. Users can also enrich the lineage with virtual assets and jobs, particularly valuable to plan and simulate future scenarios or to complete relationships that have not yet been automatically retrieved, ensuring that context and purpose of data flows are thoroughly captured and properly described.  
+At the [Table-Level Lineage](/data_catalog/frontend/data_lineage.mdx#table-level-lineage), users can dive into the interconnections between individual tables, visualizing data flows and the transformations applied along the way. Users can also enrich the lineage with virtual assets and jobs, useful to complete relationships that have not yet been automatically retrieved, ensuring that context and purpose of data flows are thoroughly captured and properly described.  
 The [SoR-Level Lineage](/data_catalog/frontend/data_lineage.mdx#sor-level-lineage) shows an aggregated view of data flows across Systems of Records, simplifying the identification of dependencies and bottlenecks at a broader scale, and clarifying how various systems interact within the organization.
 
-If you are using [Fast Data Control Plane](/fast_data/runtime_management/overview.mdx), the aggregation processes configured in your Fast Data Projects can be automatically captured in the Data Lineage, making Fast Data jobs visible on the Lineage canvas.
-
-With the Data Lineage solution, users can not only monitor their data ecosystem but also proactively model and enrich it, gaining complete control and understanding of their data flows. This solution bridges the gap between operational detail and strategic vision, supporting advanced analysis and well-informed decision-making.
+If you are using [Fast Data Control Plane](/fast_data/runtime_management/overview.mdx), the aggregation processes configured in your Fast Data Projects can be automatically captured in the Data Lineage, making Fast Data jobs visible on the Lineage canvas. To know more about how to acquire information from the Fast Data pipelines, visit the [related documentation](/data_catalog/data_catalog_job_runner.mdx#fast-data-jobs-sync).
 
 ## Connections Management in Data Catalog Application
 
-The [Connections Management](/data_catalog/frontend/data_catalog_connections.mdx) feature in Mia-Platform Data Catalog establishes the foundation for comprehensive metadata management and lineage tracking. By serving as the source of truth, Connections enable users to retrieve and leverage metadata from [various supported providers](/data_catalog/frontend/data_catalog_connections.mdx#connection-providers), supporting critical operations such as [Asset Discovery](/data_catalog/frontend/data_catalog_assets.mdx) and [Lineage Analysis](/data_catalog/frontend/data_lineage.mdx).  
+The [Connections Management](/data_catalog/frontend/data_catalog_connections.mdx) feature in Mia-Platform Data Catalog enable users to retrieve and leverage metadata from [various supported providers](/data_catalog/frontend/data_catalog_connections.mdx#connection-providers), supporting critical operations such as [Asset Discovery](/data_catalog/frontend/data_catalog_assets.mdx) and [Lineage Analysis](/data_catalog/frontend/data_lineage.mdx).  
 
 Through the Connections Panel, users can manage the lifecycle of connections, from creation to deletion, and having access to a detailed overview of all configured connections.  
-The intuitive interface also offers a wizard to guide users in defining new connections, ensuring seamless integration with external systems.  
-
-Once a connection is established, assets can be imported directly into the Data Catalog using the Data Catalog Sync feature.  
-
-If you are using [Fast Data Control Plane](/fast_data/runtime_management/overview.mdx), in order to acquire information from the Fast Data pipelines, it is possible to trigger the [Fast Data Jobs Sync](/data_catalog/data_catalog_job_runner.mdx#fast-data-jobs-sync) directly from a pre-configured gRPC interface within the administrative panel. This feature generates Open Lineage Jobs automatically, ensuring accurate representation of pipeline activities in the Data Lineage.  
-
-Supporting processes like Agent Dataset Scan, Data Catalog Sync, and Connection Cleanup maintain the efficiency and accuracy of metadata operations.
+Once a connection is established, assets can be imported directly into the Data Catalog using the Data Catalog Sync feature. To know more about the processes to updated the state of the Data Catalog solution, visit the [following documentation](/data_catalog/data_catalog_job_runner.mdx#available-jobs).
 
 ## Centralised management of the Container Registries 
 
