--- a/docs/data_catalog/data_catalog_job_runner.mdx
+++ b/docs/data_catalog/data_catalog_job_runner.mdx
@@ -57,12 +57,8 @@ This job removes all the assets of a deleted connection from the Data Catalog.
 
 _Fast Data Jobs Sync_ is a procedure that generates [Open Lineage Jobs](https://openlineage.io/docs/spec/facets/job-facets/) from existing [Fast Data pipelines of the Runtime Management](/fast_data/runtime_management/overview.mdx).
 
-This jobs can be linked to existing [Mia Platform CRUD connections](/data_catalog/frontend/data_catalog_connections.mdx#mia-platform)  where the proper namespace has been defined, so that they can be accessible
-from the [Data Lineage section](/data_catalog/frontend/data_lineage.mdx).
-
-:::caution
-Please note that both _Control Plane_ and _Data Catalog_ applications __must be__ configured with the __same__ database.
-:::
+This jobs can be linked to existing [Mia Platform CRUD connections](/data_catalog/frontend/data_catalog_connections.mdx#mia-platform)  where the proper namespace details have been defined, 
+so that they can be accessible from the [Data Lineage section](/data_catalog/frontend/data_lineage.mdx).
 
 #### Trigger Job
 
@@ -76,7 +72,7 @@ From there, you can pick the `JobRunner` service, choose the `Run` method and th
 ![Users Management UI](./img/job_runner_manual_trigger.png)
 
 :::tip
-If you've defined a Data Catalog Application that didn't define a [`grpcui`](https://github.com/fullstorydev/grpcui) microservice, you can create one with the following parameters:
+If you've already set up a Data Catalog Application that didn't have a [`grpcui`](https://github.com/fullstorydev/grpcui) microservice, you can create one with the following parameters:
 
 - __Docker Image Name__: `fullstorydev/grpcui:v1.4.1`;
 - __Command Line Arguments__:
@@ -138,7 +134,10 @@ the `persistence.configuration` key of the configuration file. The main properti
 
 - `url` &rarr; the connection string to your MongoDB instance;
 - `database` &rarr; the database name where to search for the  collections relevant to Job Runner service. Please notice that setting this property will **override** the database
-name potentially set in the connection string;
+name potentially set in the connection string.
+
+Since the _Fast Data Job Sync_ may need to retrieve Control Plane pipelines from a different database, it's also possible to provide the aforementioned properties
+in two different keys, namely `controlPlane` and `dataCatalog`, which represents two different database where the jobs will read or write data.
 
 An example of persistence configuration can be seen below:
 
@@ -156,8 +155,16 @@ An example of persistence configuration can be seen below:
 
 :::tip
 The following properties support [secret resolution](/fast_data/configuration/secrets_resolution.md):
-- `persistence.configuration.url`
-- `persistence.configuration.database`
+
+- one database instance:
+  - `persistence.configuration.url`
+  - `persistence.configuration.database`
+- two database instances:
+  - `controlPlane.configuration.url`
+  - `controlPlane.configuration.database`
+  - `dataCatalog.configuration.url`
+  - `dataCatalog.configuration.database`
+
 :::
 
 ### Secrets Names Configuration
