little improvement on lineage docs

--- a/docs/data_catalog/frontend/data_lineage.mdx
+++ b/docs/data_catalog/frontend/data_lineage.mdx
@@ -60,7 +60,7 @@ When navigating the lineage canvas, real and virtual assets are related each oth
   </div>
 </div>
 
-**Real Jobs** represent transformations or dependencies automatically inferred from runtime pipeline configurations. They are read-only within the lineage canvas, ensuring that the relationships accurately reflect the underlying physical processes. 
+**Real Jobs** (displayed with a grey arrow in the image above) represent transformations or dependencies automatically inferred from runtime pipeline configurations. They are read-only within the lineage canvas, ensuring that the relationships accurately reflect the underlying physical processes. 
 
 For each Real Job, users can inspect a detailed view that includes the job producer, a description and a snippet of code, if retrieved, showcasing the logic of the transformation. This transparency allows users to understand exactly how data flows between tables and ensures that relationships are grounded in real-world configurations.  
 
@@ -69,7 +69,7 @@ In case you have Fast-Data Projects adopting our [Mia-Platform Fast Data runtime
 To know more about how to get all the Fast Data runtime information coming from the data pipelines of your Fast Data Projects, please refer to the [related documentation](/data_catalog/data_catalog_job_runner.mdx#fast-data-jobs-sync).
 :::
 
-**Virtual Jobs**, on the other hand, are fully customizable and can be created, modified, or deleted directly within the canvas. These jobs allow users to model planned transformations or describe physically relationships still not retrived inside Data Catalog. 
+**Virtual Jobs** (displayed with a purple arrow in the image above), on the other hand, are fully customizable and can be created, modified, or deleted directly within the canvas. These jobs allow users to model planned transformations or describe physically relationships still not retrived inside Data Catalog. 
 
 Each Virtual Job includes the job producer and an editable description field where users can document about some relevant information such as the type of implemented process (e.g. ETL, filtering, replica, aggregation, other), the purpose or expected behavior.
 
