--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -19,7 +19,10 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 Mia-Platform Data Catalog introduces the [Data Lineage](/data_catalog/frontend/data_lineage.mdx), a powerful tool for understanding, visualizing, and describing the flow and transformations of data within an organization.  
 
-This feature allows users to explore data relationships at two levels: **Table Lineage** and **System of Record (SoR) Lineage**, offering both detailed insights and a high-level overview.  
+This feature allows users to explore data relationships at two levels: **Table Lineage** and **System of Record (SoR) Lineage**, offering both detailed insights and a high-level overview. 
+
+![Data Lineage](img/data-lineage-overview.png)
+
 At the [Table-Level Lineage](/data_catalog/frontend/data_lineage.mdx#table-level-lineage), users can dive into the interconnections between individual tables, visualizing data flows and the transformations applied along the way. Users can also enrich the lineage with virtual assets and jobs, useful to complete relationships that have not yet been automatically retrieved, ensuring that context and purpose of data flows are thoroughly captured and properly described.  
 The [SoR-Level Lineage](/data_catalog/frontend/data_lineage.mdx#sor-level-lineage) shows an aggregated view of data flows across Systems of Records, simplifying the identification of dependencies and bottlenecks at a broader scale, and clarifying how various systems interact within the organization.
 
