--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -37,7 +37,7 @@ The [Connections Management](/data_catalog/frontend/data_catalog_connections.mdx
 Through the Connections Panel, users can manage the lifecycle of connections, from creation to deletion, and having access to a detailed overview of all configured connections.  
 Once a connection is established, assets can be imported directly into the Data Catalog using the Data Catalog Sync feature. To know more about the processes to updated the state of the Data Catalog solution, visit the [following documentation](/data_catalog/data_catalog_job_runner.mdx#available-jobs).
 
-## Centralised management of the Container Registries 
+## Centralized management of the Container Registries 
 
 Gain more control over your container registries in your Projects! You can now easily manage and monitor them directly within your Project settings, where you can view, create, and delete them according to your purposes. 
 This update enables centralized monitoring and control of your registries, and allows you to specify the desired registry at the service level in the Design area.
@@ -62,7 +62,7 @@ For more details, please refer to [the documentation](/docs/development_suite/se
 
 #### Allowing Secret key interpolation during the creation of an env variable from secret
 
-It is now possibile to use public variables to interpolate the "Secret key" field when creating new environment variables "From Secret" on a microservice. This enhancement provides greater flexibility and automation when working with secrets, especially for complex deployments where secret keys might vary across environments.
+It is now possible to use public variables to interpolate the "Secret key" field when creating new environment variables "From Secret" on a microservice. This enhancement provides greater flexibility and automation when working with secrets, especially for complex deployments where secret keys might vary across environments.
 
 #### Infrastructure Resource
 
