added fast data updates

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -77,16 +77,10 @@ This version addressed the following bugs:
 
 ## Fast Data
 
-### Fast Data Services
+### Fast Data Runtime Management
 
-
-#### Bug Fix
-
-This version addressed a few bugs, here is a comprehensive list:
-
-* 
-
-For more information check out the service [changelog](/runtime_suite/projection-storer/changelog.md).
+The Fast Data Control Plane application has been updated to support the integration with Mia-Platform Data Catalog application for the [Data Lineage](#data-lineage) feature.  
+For more information, visit the [compatibility matrix documentation page](/fast_data/runtime_management/compatibility_matrix.md#service-latest-versions) with reported the latest service versions.
 
 ## Microfrontend Composer
 
