--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -42,6 +42,8 @@ Once a connection is established, assets can be imported directly into the Data 
 Gain more control over your container registries in your Projects! You can now easily manage and monitor them directly within your Project settings, where you can view, create, and delete them according to your purposes. 
 This update enables centralized monitoring and control of your registries, and allows you to specify the desired registry at the service level in the Design area.
 
+![Container Registry](img/container_registry.png)
+
 For more details, please refer to [the documentation](/console/project-configuration/project-settings.md#container-registries)
 
 ## Enhanced Item Management: Edit Items in Mia-Platform Software Catalog
