--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -50,6 +50,8 @@ For more details, please refer to [the documentation](/console/project-configura
 
 In this release, we’ve introduced the ability to edit items in the Software Catalog, providing more flexibility in resource management. Non-versioned items can now be fully edited, allowing users to modify all aspects of the item. For versioned items, only the metadata can be edited, while any changes to the resources will still require creating a new version.
 
+![Edit Catalog Element](img/edit_catalog.png)
+
 For more details, please refer to [the documentation](/software-catalog/manage-items/software-catalog-ui/update/overview.md)
 
 ## Introducing Snapshot Comparison through the history modal 
