little fix to custom prop docs

--- a/docs/data_catalog/frontend/data_catalog_assets.mdx
+++ b/docs/data_catalog/frontend/data_catalog_assets.mdx
@@ -164,7 +164,7 @@ Users with enough permissions can delete a custom property.
 
 :::caution 
 Pay attention when deleting a custom property, it may already be applied and valorized on many assets!  
-The deletion of a custom property may lead to inconsistencies on metadata retrieval for those assets. In this case, the frontend may no more be able to correctly interpret that metadata. Anyway, when this scenario happens, <u>the information on the asset is not lost</u>, it remains saved on DB, but on the UI that metadata will be located inside the **Unknown custom properties** section of the asset, that is described [here](#unknown-custom-properties).
+The deletion of a custom property may lead to inconsistencies on metadata retrieval for those assets. In this case, the frontend may no more be able to correctly interpret that metadata. Anyway, when this scenario happens, <u>the information on the asset is not lost</u>, it remains saved on DB, but on the UI that metadata will be located inside the **Unknown custom properties** section of the asset, that is well described [here](#unknown-custom-properties).
 :::
 
 ## Metadata Enrichment
