--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -24,7 +24,7 @@ This feature allows users to explore data relationships at two levels: **Table L
 ![Data Lineage](img/data-lineage-overview.png)
 
 At the [Table-Level Lineage](/data_catalog/frontend/data_lineage.mdx#table-level-lineage), users can dive into the interconnections between individual tables, visualizing data flows and the transformations applied along the way. Users can also enrich the lineage with virtual assets and jobs, useful to complete relationships that have not yet been automatically retrieved, ensuring that context and purpose of data flows are thoroughly captured and properly described.  
-The [SoR-Level Lineage](/data_catalog/frontend/data_lineage.mdx#sor-level-lineage) shows an aggregated view of data flows across Systems of Records, simplifying the identification of dependencies and bottlenecks at a broader scale, and clarifying how various systems interact within the organization.
+The [SoR-Level Lineage](/data_catalog/frontend/data_lineage.mdx#system-of-record-level-lineage) shows an aggregated view of data flows across Systems of Records, simplifying the identification of dependencies and bottlenecks at a broader scale, and clarifying how various systems interact within the organization.
 
 If you are using [Fast Data Control Plane](/fast_data/runtime_management/overview.mdx), the aggregation processes configured in your Fast Data Projects can be automatically captured in the Data Lineage, making Fast Data jobs visible on the Lineage canvas. To know more about how to acquire information from the Fast Data pipelines, visit the [related documentation](/data_catalog/data_catalog_job_runner.mdx#fast-data-jobs-sync).
 
