--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -30,12 +30,12 @@ If you are using [Fast Data Control Plane](/fast_data/runtime_management/overvie
 
 ## Connections Management in Data Catalog Application
 
-The [Connections Management](/data_catalog/frontend/data_catalog_connections.mdx) feature in Mia-Platform Data Catalog enable users to retrieve and leverage metadata from [various supported providers](/data_catalog/frontend/data_catalog_connections.mdx#connection-providers), supporting critical operations such as [Asset Discovery](/data_catalog/frontend/data_catalog_assets.mdx) and [Lineage Analysis](/data_catalog/frontend/data_lineage.mdx).  
+The [Connections Management](/data_catalog/frontend/data_catalog_connections.mdx) feature in Mia-Platform Data Catalog enables users to retrieve and leverage metadata from [various supported providers](/data_catalog/frontend/data_catalog_connections.mdx#connection-providers), supporting critical operations such as [Asset Discovery](/data_catalog/frontend/data_catalog_assets.mdx) and [Lineage Analysis](/data_catalog/frontend/data_lineage.mdx).  
 
 ![Data Catalog Connections Management](img/data-catalog-connections-management.png)
 
 Through the Connections Panel, users can manage the lifecycle of connections, from creation to deletion, and having access to a detailed overview of all configured connections.  
-Once a connection is established, assets can be imported directly into the Data Catalog using the Data Catalog Sync feature. To know more about the processes to updated the state of the Data Catalog solution, visit the [following documentation](/data_catalog/data_catalog_job_runner.mdx#available-jobs).
+Once a connection is established, assets can be imported directly into the Data Catalog using the Data Catalog Sync feature. To know more about the processes to update the state of the Data Catalog solution, visit the [following documentation](/data_catalog/data_catalog_job_runner.mdx#available-jobs).
 
 ## Centralized management of the Container Registries 
 
