Add CRUD SQL plugin to RN

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -141,6 +141,10 @@ A new version `1.5.2` of the User Manager Service is available!
 
 This version upgrades Node.js to v20 and several dependencies, including `custom-plugin-lib` to v6.
 
+#### CRUD SQL plugin for Oracle DB
+
+The CRUD SQL service now supports Oracle DB. You can easily integrate with an Oracle database and expose CRUD operations through HTTP with this plugin.
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.9.0-beta.0`.
