docs(release-note): add description of what has changed

--- a/docs/release-notes/v13.1.3.md
+++ b/docs/release-notes/v13.1.3.md
@@ -13,7 +13,7 @@ _December 12th, 2024_
 
 This version addressed the following bugs:
 
-*
+* It has been reviewed which Console details are attached to Fast Data Control Plane configuration to improve the handling of Fast Data Pipelines at runtime.
 
 ## How to update your Console
 
