Add link to plugin documentation

--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -144,6 +144,7 @@ This version upgrades Node.js to v20 and several dependencies, including `custom
 #### CRUD SQL plugin for Oracle DB
 
 The CRUD SQL service now supports Oracle DB. You can easily integrate with an Oracle database and expose CRUD operations through HTTP with this plugin.
+You can find more informations on the plugin [here](/runtime_suite/crud-postgresql/10_overview.md).
 
 ## How to update your Console
 
