--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -100,6 +100,13 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 ## Marketplace
 
+### New Marketplace Components
+
+#### CRUD SQL plugin for Oracle DB
+
+The CRUD SQL service now supports Oracle DB. You can easily integrate with an Oracle database and expose CRUD operations through HTTP with this plugin.
+You can find more informations on the plugin [here](/runtime_suite/crud-postgresql/10_overview.md).
+
 ### Marketplace Updates
 
 #### Care Kit
@@ -140,11 +147,6 @@ This version fixes a bug causing the UI language not matching sometimes the brow
 A new version `1.5.2` of the User Manager Service is available!
 
 This version upgrades Node.js to v20 and several dependencies, including `custom-plugin-lib` to v6.
-
-#### CRUD SQL plugin for Oracle DB
-
-The CRUD SQL service now supports Oracle DB. You can easily integrate with an Oracle database and expose CRUD operations through HTTP with this plugin.
-You can find more informations on the plugin [here](/runtime_suite/crud-postgresql/10_overview.md).
 
 ## How to update your Console
 
