--- a/docs/release-notes/v13.5.0.md
+++ b/docs/release-notes/v13.5.0.md
@@ -100,6 +100,14 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 ## Marketplace
 
+### New Marketplace Components
+
+#### CRUD SQL plugin for Oracle DB
+
+The CRUD SQL service now supports Oracle DB. You can easily integrate with an Oracle database and expose CRUD operations through HTTP with this plugin.
+You can find more information on the plugin [here](/runtime_suite/crud-postgresql/10_overview.md).
+
+
 ### Marketplace Updates
 
 #### Care Kit
