Update chart helm on v13.5.1.md

--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -41,5 +41,5 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `x.x.x`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `13.9.2-beta.0`.
 
